corlib: cmake generation included cube and buffer range headers

--- a/src/engine/modules/corlib/CMakeLists.txt
+++ b/src/engine/modules/corlib/CMakeLists.txt
@@ -46,6 +46,7 @@ set(CORE_MODULE_MATH_HEADERS
 	"include/corlib/math/color.h"
 	"include/corlib/math/color_table.h"
 	"include/corlib/math/constants.h"
+	"include/corlib/math/cube.h"
 	"include/corlib/math/local_transform.h"
 	"include/corlib/math/mathlib.h"
 	"include/corlib/math/matrix4.h"
@@ -90,6 +91,7 @@ set(CORE_MODULE_MEMORY_HEADERS
 	"include/corlib/memory/allocator_helper.h"
 	"include/corlib/memory/allocator_macro.h"
 	"include/corlib/memory/blob.h"
+	"include/corlib/memory/buffer_range.h"
 	"include/corlib/memory/buffer_ref.h"
 	"include/corlib/memory/memory_aligned_allocator.h"
 	"include/corlib/memory/memory_allocator_base.h"
