async_io: fully supports and uses extension system

--- a/src/engine/modules/async_io/CMakeLists.txt
+++ b/src/engine/modules/async_io/CMakeLists.txt
@@ -14,6 +14,7 @@ project(async_io)
 set(ASYNC_IO_MODULE_HEADERS
 	"include/async_io/async_result.h"
 	"include/async_io/file_api.h"
+	"include/async_io/async_io_subsystem.h"
 )
 	
 source_group("include" FILES ${ASYNC_IO_MODULE_HEADERS})
@@ -21,6 +22,7 @@ source_group("include" FILES ${ASYNC_IO_MODULE_HEADERS})
 ##
 
 set(ASYNC_IO_MODULE_SOURCES
+	"sources/async_io_subsystem.cpp"
 	"sources/async_request_queue.h"
 	"sources/file_api_win32.cpp"
 	"sources/file_api_win32.h"
