game: removed GLFW dependency for window creation; supports extensibility module

--- a/src/engine/game/CMakeLists.txt
+++ b/src/engine/game/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 
 ## Add modules function
 include(${CMAKE_MODULE_PATH}/add_module.cmake)
-include(${CMAKE_MODULE_PATH}/modules/include_vulkan.cmake)
 
 include(CheckFunctionExists)
 include(CheckIncludeFiles)
@@ -31,9 +30,9 @@ source_group("sources" FILES ${GAME_MODULE_SOURCES})
 ##
 
 set(GAME_MODULE_MAIN_SOURCES
-	"sources/main/glfw_main.cpp"
-	"sources/main/glfw_application.cpp"
-	"sources/main/glfw_application.h"
+	"sources/main/main.cpp"
+	"sources/main/application.cpp"
+	"sources/main/application.h"
 )
 
 source_group("sources\\main" FILES ${GAME_MODULE_MAIN_SOURCES})
@@ -43,6 +42,8 @@ source_group("sources\\main" FILES ${GAME_MODULE_MAIN_SOURCES})
 set(GAME_MODULE_MAIN_WIN_SOURCES
 	"sources/main/win/splash_screen.h"
 	"sources/main/win/splash_screen.cpp"
+	"sources/main/win/win_main.h"
+	"sources/main/win/win_main.cpp"
 )
 
 source_group("sources\\main\\win" FILES ${GAME_MODULE_MAIN_WIN_SOURCES})
@@ -59,26 +60,12 @@ source_group("sources\\main\\win" FILES ${GAME_MODULE_MAIN_WIN_RESOURCES})
 
 ##
 
-set(GAME_MODULE_MODULES_SOURCES
-	"sources/modules/rendering_module.cpp"
-	"sources/modules/rendering_module.h"
-)
-
-source_group("sources\\modules" FILES ${GAME_MODULE_MODULES_SOURCES})
-
-##
-
 set(GAME_MODULE_TASK_SOURCES
-	"sources/tasks/rendering_subsystem_task.cpp"
-	"sources/tasks/rendering_subsystem_task.h"
+	"sources/tasks/init_task.cpp"
+	"sources/tasks/init_task.h"
 )
 
 source_group("sources\\task" FILES ${GAME_MODULE_TASK_SOURCES})
-
-##
-
-set(GAME_MODULE_TASK_RENDERING_SOURCES)
-source_group("sources\\task\\rendering" FILES ${GAME_MODULE_TASK_RENDERING_SOURCES})
 
 ##
 
@@ -87,7 +74,6 @@ set(SOURCES
 	${GAME_MODULE_MAIN_SOURCES}
 	${GAME_MODULE_MODULES_SOURCES}
 	${GAME_MODULE_TASK_SOURCES}
-	${GAME_MODULE_TASK_RENDERING_SOURCES}
 )
 
 if(WIN32)
@@ -102,16 +88,14 @@ set(OPTIONS generic:cpp17=yes generic:noexceptions=yes)
 
 set(DEPENDENCY
 	module:eastl
-	module:glfw
 	module:imgui
 	module:corlib
+	module:extension
 	module:async_io
-	module:rendering_api
 	win:delayimp
 )
 
 xrng_engine_add_module(${PROJECT_NAME} EXECUTABLE OPTIONS DEPENDENCY SOURCES)
-xrng_engine_add_vulkan(${PROJECT_NAME})
 
 ## For Visual Studio
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${XR_PROJECT_PREFIX})
