--- a/src/engine/modules/CMakeLists.txt
+++ b/src/engine/modules/CMakeLists.txt
@@ -4,5 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 set(XR_PROJECT_PREFIX ${XR_PROJECT_PREFIX}/modules)
 
 add_subdirectory(corlib)
+add_subdirectory(extension)
 add_subdirectory(async_io)
-add_subdirectory(rendering_api)
+##add_subdirectory(gfx)
+add_subdirectory(sfx)
