cmake: extension module uses parallel task within project generation

--- a/src/engine/modules/extension/CMakeLists.txt
+++ b/src/engine/modules/extension/CMakeLists.txt
@@ -22,6 +22,8 @@ source_group("include" FILES ${EXTENSION_MODULE_HEADERS})
 
 set(EXTENSION_MODULE_SOURCES
 	"sources/context.cpp"
+	"sources/parallel_init_task.cpp"
+	"sources/parallel_init_task.h"
 	"sources/subsystem.cpp"
 )
 	
