cmake: DLL installation added for install target

--- a/extras/custom_cmake/CMakeLists.txt
+++ b/extras/custom_cmake/CMakeLists.txt
@@ -4,6 +4,7 @@ set(PROJECT_NAME custom_cmake)
 
 set(CMAKE_FILES 
 	"add_module.cmake"
+	"install_dll_if_exists.cmake"
 )
 
 set(CMAKE_PROGRAMS_FILES 
