[mod] added engine module to main cmakelists

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -4,4 +4,5 @@ cmake_minimum_required(VERSION 3.10)
 set(XR_PROJECT_PREFIX ${XR_PROJECT_PREFIX}/engine)
 
 add_subdirectory(corlib)
+add_subdirectory(engine)
 add_subdirectory(game)
