[mod] using engine module instead of old ones in main project

--- a/src/engine/game/CMakeLists.txt
+++ b/src/engine/game/CMakeLists.txt
@@ -93,9 +93,7 @@ set(DEPENDENCY
 	module:eastl
 	module:imgui
 	module:corlib
-	module:extension
-	module:async_io
-	module:sfx
+	module:engine
 	win:delayimp
 )
 
