--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,4 @@ cmake_minimum_required(VERSION 3.10)
 set(XR_PROJECT_PREFIX ${XR_PROJECT_PREFIX}/src)
 
 add_subdirectory(sdk)
-add_subdirectory(engine)
+add_subdirectory(code)
